deployment-approach/regular-deployment/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: votesvc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: python
    role: vote
