deployment-approach/regular-deployment/vote-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: vote.example.com
    http:
      paths:
      - backend:
          serviceName: votesvc
          servicePort: 80
